# CompaaS

./: .gitignore  .scalafix.conf  .scalafmt.conf  .sdkmanrc  Cargo.toml  CompaaS.code-workspace  Dockerfile  LICENSE  README.md  Taskfile.yml  Tiltfile  build.sbt  compose.yaml  k3d-dev.yaml  skaffold.REMOVED.git-id  skaffold.yaml
.devcontainer/: Compose.yml  Dockerfile  compose.yaml  compose.yml  devcontainer.json  docker-compose.yml  scripts.sh
.devcontainer/scripts/: build-sbt.sh  init-apt-pkgs.sh  init-common.sh  init-infra.sh  init-k8s.sh  init-k9s.sh  init-minikube.sh  init-npm-pkgs.sh  init-pueue.sh  init-runtime.sh  init-sdks.sh  init-skaffold.sh  init-tilt.sh  init-tools.sh  sbt.sh  (+7 more)
.metals/: metals.lock.db  metals.mv.db
Platform/: Pulumi.yaml  index.ts  package-lock.json  package.json
app/: CompaaS.scala
assets/: JmhPolyglot.txt
common/src/main/rust/slugify/: Cargo.toml
common/src/main/rust/slugify/src/: lib.rs
miscellaneous/: AsValue.java  BlaBla.java  Greeter.scala  JsState.java  NPAState.java  PolyglotStateStore.java  StringRevWasm.java  cmd.sh  string-reverse.c  string-reverse.wasm  string-reverse.wat  test.mjs  vela.yaml
mix_monorepo/: README.md  mix.exs
monorepo-sbt/: build.sbt
monorepo-turbo/: .gitignore  package.json
platform/: .gitignore  Pulumi.dev.yaml  Pulumi.yaml  index.ts  package-lock.json  package.json  tsconfig.json  utils.ts
project/: Dependencies.scala  plugins.sbt
sbt-monorepo/: .gitignore  .scalafmt.conf  README.md  build.sbt
scripts/: clean  dev  ebort.sh
turbo-monorepo/: package.json  pnpm-lock.yaml  turbo.json
(+237 files in other folders)
