cargo-features = ["per-package-target"]

[package]
name = "slugify"
version = "0.1.0"
edition = "2021"

default-target = "wasm32-unknown-unknown"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unidecode = "0.3.0"

[lib]
crate-type = ["cdylib"]
